Bug 161570 - FILEOPEN DOCX: numbering of paragraph style is not applied
Summary: FILEOPEN DOCX: numbering of paragraph style is not applied
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph
  Show dependency treegraph
 
Reported: 2024-06-14 11:33 UTC by Miklos Vajna
Modified: 2024-06-27 14:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (11.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-14 11:33 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-14 11:33:18 UTC
Created attachment 194733 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached bugdoc

2) Make sure the cursor is in the first, "– this is Signature style" paragraph, notice that the current paragraph style is " Signature" (space at the beginning)

3) Apply the "Level 2 Heading" paragraph style

4) Apply the previous " Signature" paragraph style

Expected result: number portion at the start is again "Signature 1"

Actual result: no number portion at start
Comment 1 BogdanB 2024-06-17 04:54:53 UTC
Confirm with
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2024-06-17 16:59:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e5dd2c0774242e44ac6edf2bd5ada220541b06b

tdf#161570 DOCX import: fix lost numbering in paragraph style

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-18 06:52:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/ea0ad1bacfd3747bdcfa10b3d6277c022eff060e

tdf#161570 DOCX import: fix lost numbering in paragraph style

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-27 14:52:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/8de8bf654d6a0146a7153b4b07f84167fc51a898

tdf#161570 DOCX import: fix lost numbering in paragraph style

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.